<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login">Login</string>
    <string name="login_hint">login name</string>
    <string name="password">Password</string>
    <string name="password_hint">enter password</string>
    <string name="flag_description">Canadian Flag</string>
    <string name="radio_button">RadioButton</string>
    <string name="check_box">CheckBox</string>
    <string name="switch_text">What does this do?</string>
    <string name="image_button_desc">camera picture</string>
    <string name="login_button">Login</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Done?</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="start_chat">Start Chat</string>
    <string name="send">send</string>
    <string name="outgoing_chat_img_desc">anonymous</string>
    <string name="incoming_chat_img_desc">anonymous_filled</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="current_temp">Current Temperature: </string>
    <string name="min_temp">Min Temperature: </string>
    <string name="max_temp">Max Temperature: </string>
    <string name="wind_spd">Wind Speed: </string>
    <string name="delete_msg">Delete This Message</string>
    <string name="title_activity_test_toolbar">AndroidLabs</string>
    <string name="toolbar_btn">Start Toolbar</string>
    <string name="go_back">Do you want to go back?</string>
    <string name="enter_msg">Enter Message: </string>
</resources>
